# TrickyStore

./: .gitignore  Agent.md  BUILD_FIXES.md  CONTRIBUTING.md  DETECTION_ANALYSIS.md  DONATE.md  FFI_SAFETY_NOTES.md  FRIDA_EVALUATION.md  Features for the future  KeyStore.kt  LANGUAGES.md  LOG.md  LatencySimulator.kt  Main.java  QuotaManager.kt  README.md  Rust.md  THEME.md  attestation.rs  benchmark_drm.kt  binder_router.cpp  build.gradle.kts  build_log.txt  class_info.txt  dummy.py  extract_html.py  final_verification.txt  find_class_WebServer_to_file.py  find_insert_position.py  find_isSafeHost_line.py  find_isSafeHost_line_to_file.py  find_ux.py  fix.patch  fix.py  fix2.py  fix3.py  fix_clippy.py  fix_cpp.py  fix_dups.py  fix_empty.py  (+79 more)
.Jules/: palette.md
.agents/workflows/: ffi-audit.md  release-prep.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: build.yml  codeql.yml  copilot-setup-steps.yml  rust-tests.yml  safety-check.yml
.jules/: bolt.md  palette.md  sentinel.md
encryptor-app/: build.gradle.kts
encryptor-app/src/main/: AndroidManifest.xml
encryptor-app/src/main/java/cleveres/tricky/encryptor/: CryptoUtils.kt  MainActivity.kt
encryptor-app/src/test/java/cleveres/tricky/encryptor/: CryptoUtilsTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle.kts
module/src/main/bpf/: binder_trace.c
module/src/main/bpf/include/: bpf_helpers.h  vmlinux_compat.h
module/src/main/cpp/: CMakeLists.txt  binder_abi.h  binder_interceptor.cpp  binder_interceptor.h
module/src/main/cpp/binder/: stub_binder.cpp  stub_utils.cpp
module/src/main/cpp/binder/include/utils/: RefBase.h  Vector.h
module/src/main/cpp/daemon/: Android.bp.txt  main.cpp
module/src/main/cpp/inject/: main.cpp  utils.cpp
module/src/main/cpp/logging/include/: logging.hpp
module/template/: action.sh  customize.sh  post-fs-data.sh  provision_attestation.sh  sepolicy.rule  service.sh  spoof_build_vars  verify.sh
rust/cbor-cose/: Cargo.toml
rust/cbor-cose/include/: cleverestricky_cbor_cose.h
rust/cbor-cose/src/: bcc.rs  binder_parser.rs  cbor.rs  cose.rs  ffi.rs  fingerprint.rs  lib.rs  properties.rs  race_engine.rs  utils.rs
service/: build.gradle.kts  proguard-rules.pro
service/src/androidTest/java/cleveres/tricky/cleverestech/: ExampleInstrumentedTest.kt  FilePollerInstrumentationTest.kt  FilePollerInstrumentationTest.kt.orig  SelinuxInstrumentationTest.kt  WebServerInstrumentationTest.kt  WebUiActionInstrumentationTest.kt
service/src/main/: AndroidManifest.xml
service/src/main/java/cleveres/tricky/cleverestech/: BetaFetcher.kt  BootLogic.kt  CboxManager.kt  Config.kt  DeviceTemplateManager.kt  DrmInterceptor.kt  DrmOverrideLogic.kt  FilePoller.kt  KeyCache.kt  KeystoreInterceptor.kt  Logger.java  Logger.kt  Main.kt  PropertyHiderService.kt  RemoteKeyManager.kt  RkpInterceptor.kt  SecurityLevelInterceptor.kt  ServerManager.kt  TelephonyInterceptor.kt  VbMetaParser.kt  Verification.kt  WebServer.kt  WebServer.kt.orig  WebUiConfig.kt  util.kt
service/src/main/res/xml/: network_security_config.xml
service/src/test/java/android/os/: Binder.java  Parcel.java  Parcelable.java  RemoteException.java
service/src/test/java/android/util/: Log.java
service/src/test/java/cleveres/tricky/cleverestech/: ActionTest.kt  AdaptiveBinderInterceptorSafetyTest.kt  AppConfigInjectionTest.kt  AppConfigKeyboxValidationTest.kt  BackupEncryptorSafetyTest.kt  (+106 more)
stub/: build.gradle.kts
stub/src/main/java/android/os/: SystemProperties.java
stub/src/main/java/android/util/: JsonReader.java
verification/: extract_html.py  verify_editor.py  verify_webui.py
(+54 files in other folders)
