[package]
name = "cleverestricky-cbor-cose"
version = "0.1.0"
edition = "2021"
description = "Memory-safe CBOR/COSE encoder for CleveresTricky RKP attestation spoofing"
license = "GPL-3.0"

[lib]
name = "cleverestricky_cbor_cose"
crate-type = ["lib", "staticlib"]

[features]
default = ["fingerprint"]
fingerprint = ["dep:minreq"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
minreq = { version = "2.12", features = ["https-rustls"], optional = true }
coset = "0.3"
p256 = { version = "0.13", features = ["arithmetic", "ecdsa", "std"] }
rand_core = { version = "0.6", features = ["std"] }
ahash = "0.8.12"

[dev-dependencies]
hex = "0.4"
rand = "0.8"
serial_test = "2.0"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
